test/e2e/failurepolicy/testdata/webhook-ignore.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: modelgate-envtest-failpolicy-ignore
webhooks:
  - name: ignore-policy-test.modelgate.dev
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
    timeoutSeconds: 5
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
    clientConfig:
      service:
        name: modelgate-envtest-failpolicy-ignore
        namespace: default
        path: /validate-pods
